creating controler for add new user

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://ZdravkoRisticn36UOjF616a82OiE@freelanceprojectone.z8pucy4.mongodb.net/?retryWrites=true&w=majority
-PASSWORD=n36UOjF616a82OiE
+DB_URL=mongodb+srv://ZdravkoRistic:n36UOjF616a82OiE@freelanceprojectone.z8pucy4.mongodb.net/?retryWrites=true&w=majority
+DB_PASSWORD=n36UOjF616a82OiE
